# ZeroTierOne

./: CMakeLists.txt  Doxyfile  make-linux.mk
debian/: changelog  control.buster  rules  zerotier-one.service
debian/patches/: cleanups-and-new-make-targets.patch  fix-parallel-makes-and-clean-targets.patch  series
doc/: Doxyfile.in  prep.sh
